src/styles/SearchResultCard.css
.searchResultCard {
    margin-top: 20px !important;
    margin:auto;
    width: 243px !important;
    height: 361px !important;
}

.card-title {
    font-size: 22px;
    margin: 0px !important;
    line-height: 24px;
}

.card-text {
    font-size: 18px;
    color: var(--myBlue);
    margin-bottom: 18px;
    line-height: 20px;
}

.exerciseCheck {
    position: absolute;
    bottom: 20px;
    left: 111.5px;
    cursor: pointer;
    height: 20px;
    width: 20px;
    accent-color: var(--myBlue);
}

.searchResultCard.card-body {
    padding-top: 0px;
}

#resultCard {
    padding-top: 0px !important;
}

